example/namespace_dev/nginx/nginx-deplyment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
  generation: 8
  labels:
    run: nginx
  name: nginx
  namespace: dev
spec:
  replicas: 4
  selector:
    matchLabels:
      run: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent  
        name: nginx
        ports:
        - containerPort: 80 
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: nginx-volume
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nginx-volume 
        hostPath:
          path: /app/data/nginx/
