example/namespace_dev/nginx/nginx-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev 
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: 
#  - host: nginx-dev.ebaotech.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx 
          servicePort: 80
